--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-10 col-md-12 mx-auto">
+      <div class="md-content col-lg-10 col-md-12 mx-auto">
 
         {{ content }}
 
