--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,9 @@
           <a class="nav-link" href="{{"/resources" | relative_url }}">Resources</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{"/events" | relative_url }}">Events</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Blog</a>
         </li>
       </ul>
